# chat

./: README.md  chat_client.py  chat_server.py  client.py  common.py  pyproject.toml  server.py
chat/: client.py  common.py  server.py
tests/: test_server.py
